# My-Packages

./: .gitignore  README.md  pyproject.toml
ASEN 6080/HW1/: prob1c_solution.json
ASEN_6080/: __init__.py
ASEN_6080/HW1/: Q1.py  code_testing.py  coordinate_manager.py  generic_functions.py  integrator.py  measurement_manager.py  perturbation_jacobian.py
ASEN_6080/HW2/: batch_lls_testing.py  ekf_testing.py  lkf_testing.py  measurement_generation.py  trajectory_comparison.py
ASEN_6080/HW2/measurement_data/: simulated_measurement_J3.pkl  simulated_measurement_long.pkl  simulated_measurements.pkl  simulated_measurements_J3.pkl  simulated_measurements_long.pkl  simulated_measurements_no_noise.pkl
ASEN_6080/HW3/: snc_testing.py
ASEN_6080/Project1/: data_conditioning.py  main.py  project_1_bls_testing.py  project_1_lkf_testing.py  project_1_main.py  variable_integration_testing.py  variable_jacobian_testing.py
ASEN_6080/Project1/data/: conditioned_measurements.pkl  project.txt
ASEN_6080/Tools/: EKF.py  LKF.py  __init__.py  batch_lls_estimator.py  coordinate_manager.py  generic_functions.py  integrator.py  measurement_manager.py
asen6080_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
astro_tools.egg-info/: PKG-INFO  SOURCES.txt
