[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asen6080-tools"
version = "0.1.0"
description = "Astrodynamics tools for ASEN 6080 - orbit propagation, coordinate transformations, and measurement processing"
requires-python = ">=3.8"
authors = [
    {name = "awillebrand"}
]
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "plotly",
]

[tool.setuptools. packages.find]
where = ["."]
include = ["ASEN_6080*"]